--- a/style.css
+++ b/style.css
@@ -9,7 +9,7 @@
       width:200px;
       height: 200px;
       margin: auto;
-      background-color: yellow;
+      background-color: gray;
       border-radius: 50%;
       box-shadow: 5px 5px 20px gray;
       position: relative;
